# tableaux

./: .gitignore  Cargo.toml  README.md  examples-graham-priest.toml  examples.toml  flake.nix
.helix/: languages.toml
nix/: module.nix  tableaux-playground.nix  tableaux-wasm.nix
playground/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
playground/src/: app.css
playground/src/lib/: Concludes.svelte  Tableau.svelte  TableauEdit.svelte  logic.ts
playground/src/lib/components/: Back.svelte
playground/src/lib/examples/: index.server.ts  index.ts
playground/src/routes/: +layout.svelte  +page.svelte
playground/src/routes/about/: +page.svelte
playground/src/routes/example/: +page.server.ts  +page.svelte  ChapterExamples.svelte  index.server.ts  index.ts
playground/src/routes/example/[chapter]/: +page.server.ts  +page.svelte
playground/src/routes/example/[chapter]/[section]/: +page.server.ts
playground/src/routes/example/[chapter]/[section]/[paragraph]/: +page.server.ts  +page.svelte
playground/src/routes/sandbox/: +page.svelte
src/: classical.rs  core.rs  lib.rs  logic.rs  main.rs  modal.rs  normal_modal.rs  tableau.rs
src/logic/: dynamic.rs  lexer.rs  mod.rs
src/logic/impls/: classical.rs  mod.rs  modal.rs  normal_modal.rs
